# pico-simple-mqtt

./: .gitignore  .gitmodules  CMakeLists.txt
configs/CoreMQTT/: core_mqtt_config.h
configs/CoreMQTT-Agent/: freertos_command_pool.c
configs/FreeRTOS-Kernel/: FreeRTOSConfig.h
multicore-test/: CMakeLists.txt  main.c
multicore-test/creds/: device.cmake
pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S
pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
pioasm/: pioasm
src/: CMakeLists.txt  main.c  mqttagent.c  mqttagent.h  mqtttask.c  mqtttask.h  mqttthing.c  mqttthing.h  pico-simple-mqtt.dis  pico-simple-mqtt.uf2  tcptransport.c  tcptransport.h  topichelper.c  topichelper.h  wifihelper.c  wifihelper.h
src/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
src/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
test/: main.c
